--- a/api/templates/api/search.html
+++ b/api/templates/api/search.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Buscar colores</title>
+	<title>Search Colors</title>
 
     <!-- –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
